--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,3 +1,7 @@
-{
-  "plugins": ["babel-plugin-styled-components"]
-}
+// {
+//   "plugins": [
+//     [
+//       "babel-plugin-styled-components"
+//     ]
+//   ]
+// }
