--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@next/font": "13.1.6",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "json-server": "^0.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
     "styled-components": "^5.3.6"
   },
