--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
