--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@paystack/inline-js": "^2.12.6",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "json-server": "^0.17.1",
