--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
