--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
-    "styled-components": "^5.3.6",
-    "yup": "^1.0.2"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7"
