--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@styled/typescript-styled-plugin": "^1.0.0",
     "babel-plugin-styled-components": "^2.0.7"
   }
 }
