--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write '*/**/*.{ts,tsx,js,jsx,json,css,scss,md}'",
     "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "@next/font": "13.1.6",
     "@paystack/inline-js": "^2.12.6",
-    "eslint": "8.34.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "eslint-config-next": "13.1.6",
     "json-server": "^0.17.1",
     "next": "13.1.6",
@@ -21,10 +22,23 @@
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-redux": "^9.1.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@styled/typescript-styled-plugin": "^1.0.0",
-    "babel-plugin-styled-components": "^2.0.7"
+    "@types/node": "^22.5.3",
+    "@types/react": "^18.3.5",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4"
   }
 }
