--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@paystack/inline-js": "^2.12.6",
     "@reduxjs/toolkit": "^2.2.7",
     "country-state-city": "^3.2.1",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^14.2.11",
     "json-server": "^0.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -38,7 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "^9.9.1",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-prettier": "^5.2.1",
